fixed a bug where background picture not showing up corectly

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ img {
   flex-direction: column;
   justify-content: flex-end;
   background-size: cover;
+  background-repeat: no-repeat;
   /* position: relative; */
 }
 #item4 {
@@ -130,6 +131,7 @@ img {
   flex-direction: column;
   justify-content: flex-end;
   background-size: cover;
+  background-repeat: no-repeat;
   /* position: relative; */
 }
 #item5 {
